# PatchGym

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
patchgym/: __init__.py  __main__.py  cli.py  env.py  generate.py  runner.py  summarize.py  verifiers_adapter.py  verify.py
patchgym/agents/: __init__.py  openai_compatible.py
patchgym/generators/: __init__.py  cli_template.py  parser_template.py  sqlite_template.py
patchgym/verifier/: __init__.py  api_contract.py  patch_budget.py  tests_runner.py
rlm_patchplan/: __init__.py  evaluate.py  generate.py  metrics.py  openai_compatible.py  optimize_gepa.py  programs.py  report.py  schema.py  templates.py
scripts/: run_openai_compatible_e2e.sh
tests/: test_patchgym_env.py  test_patchgym_hard_families.py  test_patchgym_mvp.py  test_patchgym_openai_agent.py  test_patchgym_runner.py  test_patchgym_templates.py  test_project_metadata.py  test_rlm_patchplan.py
